--- a/assignment4b/style.css
+++ b/assignment4b/style.css
@@ -1,9 +1,11 @@
 *{
   margin: 0;
   padding: 0;
-  font-size: 40px;}
+  font-size: 40px;
+}
 
 p{
+  font-family: 'Satisfy', ;
   background-color: lightpink;
   border: 1px solid pink;
 }
